[package]
name = "paine"
version = "0.1.0"
authors = ["jasilven <jasilven@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

threadpool = {version = "1"}
anyhow = {version = "1"}
reqwest = {version = "0.11", features = ["blocking"]}
structopt = { version = "0.3", default-features = false }
chrono = "0.4"
tui = "0.14"
termion = "1.5"
